2009-01-07  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/README.Packaging: Mention clearly setting
	GNUSTEP_INSTALLATION_DOMAIN in the environment before
	configuring gnustep-base.

2009-01-06  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.8

2008-12-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Added -s option when invoking make, fixing
	the problems with spurious output when gnustep-config was used in
	a process spawned by a makefile (eg, configure in gnustep-base
	when triggered by its Makefile.postamble).

2008-12-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Added new --installation-domain-for=xxx option.
	* rules.make (print-gnustep-make-installation-domain): New target.

2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.7

2008-12-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* installation-domains.conf: Added gnustep-objc to the System
	packages.
	
2008-12-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	New configuration file that allows hardcore developers building
	everything from source to specify arbitrary default installation
	domains for the software.  You just need to copy the
	installation-domains.conf file to the same directory as the
	GNUstep.conf file, and edit it to customize the default
	installation domain (Thanks to Richard for the idea).

	* common.make: Read installation-domains.conf file if it exists,
	and use it to customize the default installation domains.
	* installation-domains.conf: New file.

	Reverted last change.
	* configure.ac: Removed option --disable-packages.
	* configure: Regenerated.
	* config-noarch.make.in: Removed
	GNUSTEP_INSTALL_CORE_INTO_SYSTEM_DOMAIN.
	* common.make: Reverted last change.
	
2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: New option --disable-packages that causes
	gnustep-make to assume packages are never involved, so it defaults